# app/docs/swagger.json
@@ -4,7 +4,7 @@
         "contact": {}
     },
     "paths": {
-        "/auth/login": {
+        "/api/auth/login": {
             "post": {
                 "description": "Authenticates a user and returns JWT access and refresh tokens",
                 "consumes": [
@@ -53,7 +53,7 @@
                 }
             }
         },
-        "/auth/logout": {
+        "/api/auth/logout": {
             "post": {
                 "description": "Logs out the user by invalidating refresh token and clearing cookies",
                 "produces": [
@@ -74,7 +74,7 @@
                 }
             }
         },
-        "/auth/refresh": {
+        "/api/auth/refresh": {
             "post": {
                 "description": "Rotates refresh token and issues new access and refresh tokens",
                 "produces": [
@@ -109,7 +109,7 @@
                 }
             }
         },
-        "/health": {
+        "/api/health": {
             "get": {
                 "description": "Returns the health status of the application",
                 "produces": [
@@ -130,7 +130,7 @@
                 }
             }
         },
-        "/notes": {
+        "/api/note": {
             "get": {
                 "security": [
                     {
@@ -288,7 +288,7 @@
                 }
             }
         },
-        "/notes/{id}": {
+        "/api/note/{id}": {
             "get": {
                 "security": [
                     {
@@ -384,7 +384,7 @@
                 }
             }
         },
-        "/users": {
+        "/api/user": {
             "get": {
                 "security": [
                     {
@@ -540,7 +540,7 @@
                 }
             }
         },
-        "/users/password": {
+        "/api/user/password": {
             "put": {
                 "security": [
                     {
@@ -583,7 +583,7 @@
                 }
             }
         },
-        "/users/{id}": {
+        "/api/user/{id}": {
             "get": {
                 "security": [
                     {
